@@ -226,8 +226,11 @@
       }
 
       // Otherwise we check the headers
-      $headerlng = atkLanguage::getLanguageFromHeaders();
-      if ($headerlng && in_array($headerlng,$supported)) return $headerlng;
+      if (atkconfig('use_browser_language', false))
+      {
+        $headerlng = atkLanguage::getLanguageFromHeaders();
+        if ($headerlng && in_array($headerlng,$supported)) return $headerlng;
+      }
 
       // We give up and just return the default language
       return atkconfig('language');
